Fixed spacing issue with lazy hack

--- a/assets/less/hmcc.less
+++ b/assets/less/hmcc.less
@@ -128,3 +128,7 @@ label {
     -ms-user-select: none;
     user-select: none;
 }
+
+.spacing-bottom {
+	margin-bottom: 10px;
+}
